Fix modals on iOS

--- a/src/Templates/AdminPanel/Bit.AdminPanel/src/Client/Core/Pages/Products/CreateEditProductModal.razor.scss
+++ b/src/Templates/AdminPanel/Bit.AdminPanel/src/Client/Core/Pages/Products/CreateEditProductModal.razor.scss
@@ -15,7 +15,7 @@
     padding: rem(16px) rem(24px);
 
     .bit-ios & {
-        padding: rem(16px) rem(24px) env(safe-area-inset-bottom);
+        padding: rem(16px) rem(24px) calc(rem(16px) + env(safe-area-inset-bottom));
     }
 
     @include sm {
